# extensions-AnimationFramework

./: AnimationFramework.dist  CMakeLists.txt  README.txt  Setup.cmake
Animations/: AnimatedMesh.cpp  AnimatedMesh.h  AnimatedTransformation.cpp  AnimatedTransformation.h  Animation.cpp  Animation.h  Animator.cpp  Animator.h  Bone.cpp  Bone.h  IMeshDeformer.h  MetaMorpher.h
Scene/: AnimatedMeshNode.cpp  AnimatedMeshNode.h  AnimatedTransformation.cpp  AnimatedTransformationNode.cpp  AnimatedTransformationNode.h  AnimationNode.cpp  AnimationNode.h
